# ccpick

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  README_zh.md  USAGE.md
src/: cli.rs  completions.rs  config.rs  guide.rs  main.rs  manifest.rs  plugins.rs  project.rs  remote.rs  scanner.rs  symlinks.rs
src/commands/: edit.rs  guide.rs  init.rs  install.rs  mod.rs  sync.rs  template.rs  tidy.rs
